Deadlock during oplog application when implicitly creating multiple collections on the same DB

XMLWordPrintableJSON

    • Replication
    • Fully Compatible
    • ALL
    • Repl 2016-12-12
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      It is possible for a node to hang during initial sync or steady state replication when CRUD operations implicitly create collections on the same database (e.g. when inserting a document into a collection that did not exist).

      The root cause is likely to be that when a collection creation is deemed necessary, each thread applying an operation will try to upgrade an IX lock on the DB to mode X, causing them to deadlock on each other.

      This issue should have been present in v3.0.0, possibly earlier versions as well.

            Assignee:
            [DO NOT USE] Backlog - Replication Team
            Reporter:
            Robert Guo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: