SERVER-27164 do not upgrade dblock for replication, to avoid deadlock

(cherry picked from commit e876419bebadd6468c402e85e1fcf6eff5a374d4)